@@ -1,3 +1,12 @@
+2009-01-19  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/hildon-button.c (hildon_button_init)
+	* src/hildon-check-button.c (hildon_check_button_init)
+	* src/hildon-gtk.c (button_common_init): Don't let buttons get the
+	focus when clicked by default.
+
+	Fixes: NB#93431 (Main window not getting the focus once dialog is closed)
+
 2009-01-19  Claudio Saavedra  <csaavedra@igalia.com>
 
 	* src/hildon-date-button.c: (hildon_date_button_init): Remove an unneeded
